--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Imports:
     foreach,
     doParallel,
     BFDA
-Remotes: nicebread/BFDA/tree/master/package
+Remotes: nicebread/BFDA/package
 License: 
 Encoding: UTF-8
 LazyData: true
