added fftlikelihood test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bfbinom)
 export(bfttest)
 export(energybf)
 export(fftcreate)
+export(fftlikelihood)
 export(ffttest)
 export(maxbf)
 export(plotbf)
