added robustness analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 export(bfbinom)
 export(bfcor)
 export(bfttest)
+export(bfttestRobustness)
 export(energybf)
 export(fftcreate)
 export(ffttest)
 export(maxbf)
 export(plotbf)
 export(plotfft)
+export(plotrobust)
 export(plotrw)
 export(simcreate)
 export(simredo)
