changed to a more generic robustness function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 S3method(plot,bfttestRobustness)
 S3method(plot,seqbf)
 S3method(print,SeqBF)
+export(bfRobustness)
 export(bfbinom)
 export(bfcor)
 export(bfttest)
-export(bfttestRobustness)
 export(energybf)
 export(fftcreate)
 export(ffttest)
