ffttest automatically creates fft

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(maxbf)
 export(plotbf)
 export(plotfft)
 export(plotrobust)
+export(plotrobustTile)
 export(plotrw)
 export(simcreate)
 export(simredo)
