--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: changeofevidence
 Type: Package
 Title: Change of Evidence
-Version: 0.6.2
+Version: 0.7.0
 Author: Moritz Dechamps
 Maintainer: Moritz Dechamps <moritz.dechamps@psy.lmu.de>
 Description: This package provides functions to test for a change of evidence over time. It can be used to examine volatile effects.
@@ -9,8 +9,7 @@ Imports:
     BayesFactor,
     ggplot2,
     pracma,
-    foreach,
-    doParallel,
+    parallel,
     pbapply,
     hypergeo
 License: 
