--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,bfRobustness)
 S3method(plot,seqbf)
 S3method(print,bfRobustness)
+S3method(print,coe)
 S3method(print,seqbf)
 export(bfRobustness)
 export(bfbinom)
