--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,11 @@ export(plotrobustTile)
 export(plotrw)
 export(simcreate)
 export(simredo)
+importFrom(BayesFactor,correlationBF)
+importFrom(BayesFactor,proportionBF)
+importFrom(stats,binom.test)
+importFrom(stats,complete.cases)
+importFrom(stats,cor.test)
+importFrom(stats,na.omit)
+importFrom(stats,t.test)
+importFrom(stats,var)
