--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: changeofevidence
 Type: Package
 Title: Change of Evidence
-Version: 1.2
+Version: 1.3
 Author: Moritz Dechamps
 Maintainer: Moritz Dechamps <moritz.dechamps@psy.lmu.de>
 Description: This package provides functions to test for a change of evidence over time. It can be used to examine volatile effects.
@@ -12,8 +12,9 @@ Imports:
     pracma,
     parallel,
     pbapply,
-    hypergeo
+    hypergeo,
+    logspline
 License: 
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
