--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,3 +30,4 @@ importFrom(stats,cor.test)
 importFrom(stats,na.omit)
 importFrom(stats,t.test)
 importFrom(stats,var)
+importFrom(stats,wilcox.test)
