--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: changeofevidence
 Type: Package
 Title: Change of Evidence
-Version: 1.3.3
+Version: 1.4
 Author: Moritz Dechamps
 Maintainer: Moritz Dechamps <moritz.dechamps@psy.lmu.de>
-Description: This package provides functions to test for a change of evidence over time. It can be used to examine volatile effects.
+Description: This package provides functions to test for a change of Bayesian evidence over time which can be used to examine volatile effects. It includes sequential Bayesian testing methods for t-Tests, Non-Parametric Tests, Binomial Tests, and Correlation Tests.
 Imports:
     BayesFactor,
     ggplot2,
@@ -14,7 +14,7 @@ Imports:
     pbapply,
     hypergeo,
     logspline
-License: 
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
