--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,10 +24,16 @@ export(simcreate)
 export(simredo)
 importFrom(BayesFactor,correlationBF)
 importFrom(BayesFactor,proportionBF)
+importFrom(parallel,clusterExport)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
+importFrom(parallel,stopCluster)
+importFrom(pbapply,pblapply)
 importFrom(stats,binom.test)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,na.omit)
+importFrom(stats,quantile)
 importFrom(stats,t.test)
 importFrom(stats,var)
 importFrom(stats,wilcox.test)
