--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(bfbinom)
 export(bfcor)
 export(bfttest)
 export(coe)
+export(download_quantum_data)
 export(energybf)
 export(fftcreate)
 export(ffttest)
@@ -21,6 +22,9 @@ export(plotrobust)
 export(plotrobustTile)
 export(plotrw)
 export(simcreate)
+export(simcreate_bin)
+export(simcreate_cor)
+export(simcreate_t)
 export(simredo)
 importFrom(BayesFactor,correlationBF)
 importFrom(BayesFactor,proportionBF)
