--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,16 +28,55 @@ export(simcreate_t)
 export(simredo)
 importFrom(BayesFactor,correlationBF)
 importFrom(BayesFactor,proportionBF)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_cartesian)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,expansion)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,margin)
+importFrom(ggplot2,scale_color_brewer)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(grDevices,rgb)
 importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(pbapply,pblapply)
+importFrom(stats,aggregate)
+importFrom(stats,as.formula)
 importFrom(stats,binom.test)
 importFrom(stats,complete.cases)
+importFrom(stats,cor)
 importFrom(stats,cor.test)
+importFrom(stats,dbeta)
+importFrom(stats,dcauchy)
+importFrom(stats,fft)
+importFrom(stats,integrate)
+importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,pbeta)
+importFrom(stats,pcauchy)
+importFrom(stats,pnorm)
+importFrom(stats,qnorm)
 importFrom(stats,quantile)
+importFrom(stats,rbinom)
+importFrom(stats,rgamma)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(stats,t.test)
 importFrom(stats,var)
 importFrom(stats,wilcox.test)
+importFrom(utils,download.file)
+importFrom(utils,head)
+importFrom(utils,read.table)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,tail)
+importFrom(utils,txtProgressBar)
