--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,bfRobustness)
 S3method(plot,coe)
 S3method(plot,seqbf)
 S3method(print,bfRobustness)
+S3method(print,cauchyFit)
 S3method(print,coe)
 S3method(print,seqbf)
 export(bfRobustness)
@@ -13,6 +14,7 @@ export(bfttest)
 export(coe)
 export(download_quantum_data)
 export(energybf)
+export(extractPrior)
 export(fftcreate)
 export(ffttest)
 export(maxbf)
@@ -61,6 +63,8 @@ importFrom(stats,fft)
 importFrom(stats,integrate)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,optim)
+importFrom(stats,optimize)
 importFrom(stats,pbeta)
 importFrom(stats,pcauchy)
 importFrom(stats,pnorm)
@@ -72,6 +76,7 @@ importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,t.test)
+importFrom(stats,uniroot)
 importFrom(stats,var)
 importFrom(stats,wilcox.test)
 importFrom(utils,download.file)
