--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,seqbf)
 S3method(print,bfRobustness)
 S3method(print,cauchyFit)
 S3method(print,coe)
+S3method(print,coe_sim)
 S3method(print,seqbf)
 export(bfRobustness)
 export(bfbinom)
@@ -17,6 +18,7 @@ export(energybf)
 export(extractPrior)
 export(fftcreate)
 export(ffttest)
+export(is.coe_sim)
 export(maxbf)
 export(plotbf)
 export(plotfft)
